docs: atualizado o exemplo de .env

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
-# .env.example
-API_KEY=chave_aqui
+# Config GOOGLE GEMINI
+GOOGLE_GEMINI_API_KEY=
+GOOGLE_GEMINI_MODEL=gemini-2.5-flash-lite
+GOOGLE_GEMINI_TEMPERATURE=0
+
+#Config GOOGLE GEMINI EMBEDDINGS
+GOOGLE_GEMINI_EMBEDDINGS_API_KEY=
+GOOGLE_GEMINI_EMBEDDINGS_MODEL=models/gemini-embedding-001
